[package]
name = "login_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = [ "login", "auth", "userman", "scratchpad", "cats", "primes_slow", 
"primes_shared", "primes_rayon", "rayon_threads", "tokio_scratch",
"tokio_tcp_server", "rpc_server", "tokio_channels", "tokio_broadcast",
"system_channels", "globals", "rwlock", "newtypes", "traits1",
"generic_data", "generic_data_adv", "macros", "feature_flags" ]
